--- a/app/assets/stylesheets/gender.scss
+++ b/app/assets/stylesheets/gender.scss
@@ -12,47 +12,242 @@
     }
 }
 
-
-
-.gender-main {
+.shadow {
     width: 100%;
-    height: 100%;
-    background-color: rgb(165, 22, 22);
+    height: 100%; 
+    position: absolute;
+    transition: box-shadow 0.3s linear 0s;
+    top: 0s;
+    left: 0s;
+    z-index: 5;
+}
+.back {
+    width: 55vh;
+    height: 40vh;
+}
+.gender-game-menu {
+    width: 35vh;
+    margin-right: 8vh;
+    min-height: 104vh;
+    border-radius: 0.5vh;
+    background-color:#153450;
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.207);
+    margin-bottom: 6vh;
+    overflow: hidden;
+}
+
+.gender-game-menu-category {
+    
+   
+    overflow: hidden;
+    width: 100%;
+    h1 {
+        color: white;
+        font-size: 2.5vh;
+        height: 6.5vh;
+        padding-top:2vh;
+        padding-left: 3vh;
+        overflow:hidden;
+        white-space:nowrap;
+        text-overflow: ellipsis;
+       
+    }
+    h2 {
+        height: 6vh;
+        padding-top:2vh;
+        padding-left: 3vh;
+        color: white;
+        font-size: 2vh;
+        cursor:pointer;
+        img {
+            position: relative;
+            top: 0.5vh;
+            width: 2vh;
+            height: 2vh;
+        }
+    }
+    h2:hover {
+        background-color: #224765;
+    }
+}
+
+.on {
+    background-color: #204461;
+    
+}
+.on1 {
+    background-color: #1c3b55;
+}
+.gender-game-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.gender-main {
+    padding-top: 15vh;
+  
+    // background-color:  #1874d2;
+    display:flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: row;
+    position: relative;
+    
+}
+
+.category {
+    width: 100%;
+    padding-top: 2vh;
+    height: 8vh;
+    font-size: 4vh;
+    padding-left: 2vh;
+    background-color:#1d3f5c;
+    color: white;
+}
+.gender-top {
+    width: 100vh;
+    height: 20vh;
+    background-color: #447294;
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.207);
+    border-radius: 0.5vh;
+}
+.gender-main-game {
+    margin-top: 4vh;
+    width: 100vh;
+    height: 70vh;
+    background-color: #f2f2f2;
+    position: relative;
+    overflow: hidden;
+    border-radius: 0.5vh;
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.207);
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    display: flex;
+  
+    h1 {
+        font-size: 4vh;
+        font-weight: 300;
+        cursor: pointer;
+        color: rgb(79, 16, 92);
+        
+    }
+}
+
+
+
+.next-play {
+    width: 100vh;
+    height: 6vh;
+    margin-top: 4vh;
+    border-radius:0.5vh;
     display:flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    position: relative;
+    h1 {
+        font-size: 2.5vh;
+        color:white;
+        font-weight: 300;
+    }
+    box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.207);
+    background-color: #294052;
+   
+  
 }
 
-.gender-main-game {
-    width: 100vh;
-    height: 70vh;
-    background-color: white;
-    position: relative;
-    overflow: hidden;
-}
-
-
-.next-play {
-    width: 10vh;
-    height: 10vh;
-    background-color: grey;
-    z-index: 2;
+.game-nav {
+    height: 7vh;
+    top: 0;
     position: absolute;
+    z-index: 7;
+    width: 100%;
+    // background-color: rgba(0, 0, 0, 0.04);
+    // box-shadow: 0 1vh 1vh rgba(0, 0, 0, 0.04);
+    display: flex;
+    padding: 0 2vh 0 2vh;
+    justify-content: space-between;
+    opacity: 1;
+    align-items: center;
+    transition: opacity 0.3s linear 0s;
+    h1 {
+        font-size: 2vh;
+    }
+    img {
+        width: 5vh;
+        height: 5vh;
+        position: relative;
+        top: 0.5vh;
+        cursor: pointer;
+    }
+    
 }
-
-.students {
+.opacity {
+    
+    opacity: 0;
+}
+.play {
+    width: 15vh;
+    height:15vh;
     position:absolute;
-    left: 300px;
-    top: 400px;
-    z-index:1;
-
+    transition: opacity 0.3s linear 0s;
+    opacity:0;
+    
+    z-index: 10;
+    opacity: 0;
+    cursor: pointer;
 }
 
+.gender-main-game:hover {
+  
+    .game-nav {
+        opacity:1;
+    }
+    .play {
+        opacity: 1;
+    }
+    .shadow {
+        box-shadow:  inset 0vh 0vh 10vh rgba(0, 0, 0, 0.15);
+    }
+}
+.game-nav:hover {
+
+    opacity: 1;
+}
+.student0, .student1, .student2, .student3, .student4, .student4-1, .student4-2 {
+    position:absolute;
+    left:40%;
+    bottom: 0%;
+    height: 55%;
+    width: 30%;
+    z-index:2;
+    display:none;
+}
+.student1 {
+  left:40%;
+  width: 35%;
+}
+.student3 {
+    height: 55%;
+    width: 20%;
+
+}
+.student0{ 
+    height: 55%;
+    width: 20%;
+    left: 80%;
+   
+}
+
+.student4, .student4-1, .student4-2  {
+    height: 55%;
+    width: 35%;
+    left: 10%;
+    transform:scaleX(-1);
+}
 .move-left {
-    left:500px;
-    transition: left 2s ease-in 0s;
+    left: 70%;
+    transition: left 4s linear 0s;
 }
 
 .move-right {
@@ -61,29 +256,130 @@
 }
 
 .teacher  {
-     width: 200px;
-     height: 200px;
-     background: yellow;
-     transition: height 2s ease-in 0s, width 2s ease-in 0s;
+    width: 20%;
+    height: 80%;
+  
+    z-index:3;
+    position: absolute;
+    display:none;
+    bottom:-15%;
+    left: 10%;
 }
 
 .teacher-expand {
-    height: 25  0px;
+    height: 250px;
     width: 250px;
 
 }
+
 
 .game-back {
     position: absolute;
     z-index: 1;
     left: 0;
-    top: -5%;
-    width: 100%;
+    top: -3%;
+    width: 103%;
     height: 110%;
+    display: none;
+
+}
+.game-back2 {
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 0%;
+    width: 130%;
+    height: 130%;
+    display:none;
+}
+.game-back3 {
+    position: absolute;
+    z-index: 1;
+    left:-30%;
+    width: 130%;
+    height: 130%;
+    display:none;
+}
+
+.game-back4 {
+    position: absolute;
+    z-index: 1;
+    left:-30%;
+    width: 250%;
+    height: 250%;
+    display:none;
+}
+
+.game-back5 {
+    position: absolute;
+    z-index: 1;
+    right: -30%;
+    width: 250%;
+    height: 250%;
+    display:none;
+}
+.game-back6 {
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    width: 130%;
+    height: 130%;
+    display:none;
+}
+.game-back-move {
+    transition: top 3s linear 0s;
+    top: 0%;
+   
 
 }
 
-.game-back-move {
-    top: 0%;
-    transition: top 2.5s ease-in 0s;
+.girl-left {
+    left: 30%;
+}
+
+.talk {
+    width: 20vh;
+    height: 20vh;
+    position: absolute;
+    
+    z-index: 5;
+    display:none;
+}
+
+.talk1,.talk3, .talk5, .talk6, .talk7, .talk0 {
+    left: 25%;
+    top: 20%;
+}
+
+.talk2, .talk4 {
+    right: 25%;
+    top:30%;
+}
+
+.talk5, .talk6, .talk7 {
+    width: 35vh;
+    height: 35vh;
+    left: 25%;
+    top: 10%;
+
+}
+.talk8, .talk9, .talk10, .talk13 {
+    width: 35vh;
+    height: 35vh;
+    left: 40%;
+    top: 10%;
+}
+
+ .talke11, .talk12 {
+    width: 30vh;
+    height: 30vh;
+
+}
+.talk12 {
+left: 65%;
+top: 10%;
+}
+.talk11 {
+    left: 25%;
+    top: 15%;
 }
