--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,11 +5,11 @@
     <%= csrf_meta_tags %>
     
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <%# <script src="https://apis.google.com/js/platform.js" async defer></script> %>
-    
-   
-
+  
+  
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
      <meta name="google-signin-client_id" content="336256666389-timddavdks14cnn1jhqv6qqpcjuo4s37.apps.googleusercontent.com">
     <link href='https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css' rel='stylesheet' type='text/css'>
