--- a/app/assets/stylesheets/gender.scss
+++ b/app/assets/stylesheets/gender.scss
@@ -107,9 +107,48 @@
 .gender-top {
     width: 100vh;
     height: 20vh;
-    background-color: #447294;
+    background-color: #f2f2f2;
     box-shadow: 1vh 1vh 2vh rgba(0, 0, 0, 0.207);
     border-radius: 0.5vh;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    display: flex;
+    position: relative;
+    h1 {
+        font-size: 3vh;
+        font-weight: 400;
+        color:#325a77;
+     text-shadow: none;
+    }
+    h2 {
+        font-size: 2.2vh;
+        color:#325a77;
+        text-shadow: none;
+    }
+    h3 {
+        margin-top: 2vh;
+        font-size: 1.6vh;
+        color:#325a77;
+        text-shadow: none;
+    }
+    h4 {
+        font-size: 1.8vh;
+        color:#325a77;
+        text-shadow: none;
+    }
+    img {
+        width: 4vh;
+        heighT:4vh;
+    }
+    .game-logo {
+        width: 16vh;
+        position: relative;
+        top:1.5vh;
+        height: 16vh;
+        margin-left: 4vh;
+        margin-right: 3vh;
+    }
 }
 .gender-main-game {
     margin-top: 4vh;
@@ -129,7 +168,7 @@
         font-size: 4vh;
         font-weight: 300;
         cursor: pointer;
-        color: rgb(79, 16, 92);
+        color: #5fa5d4;
         
     }
 }
@@ -172,6 +211,8 @@
     transition: opacity 0.3s linear 0s;
     h1 {
         font-size: 2vh;
+        color: #3174a3;
+        font-weight:400;
     }
     img {
         width: 5vh;
@@ -295,6 +336,7 @@
     position: absolute;
     z-index: 1;
     left:-30%;
+    top:0%;
     width: 130%;
     height: 130%;
     display:none;
@@ -313,6 +355,7 @@
     position: absolute;
     z-index: 1;
     right: -30%;
+    top: 0;
     width: 250%;
     height: 250%;
     display:none;
@@ -321,6 +364,7 @@
     position: absolute;
     z-index: 1;
     right: 0;
+    top: 0;
     width: 130%;
     height: 130%;
     display:none;
@@ -331,7 +375,9 @@
    
 
 }
-
+.game-top-text {
+    border-left: 0.2vh solid rgb(199, 197, 218);padding-left:5vh;
+}
 .girl-left {
     left: 30%;
 }
@@ -371,19 +417,19 @@
 
  .talke11, .talk12 {
     width: 30vh;
+
     height: 30vh;
 
 }
 .talk12 {
-left: 65%;
-top: 10%;
+    left: 65%;
+    top: 10%;
+
 }
 .talk11 {
     left: 25%;
     top: 15%;
-    top: -5%;
-    width: 100%;
-    height: 110%;
+    
 
 }
 
