--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -80,8 +80,8 @@
   <div class="post-index-container">
     <div class="post-index-container-top">
       <div style="display:flex;align-items:center;">
-        <h1 style="font-size: 6vh">커뮤니티</h1>
-        <h2 style="font-size: 3vh">Main</h1>
+        <a style="font-size: 6vh" href="/posts">커뮤니티</a>
+        <a style="font-size: 3vh" href="/posts">Main</a>
       </div>
       <div class="post-search" style="">
         <h1>검색 :</h1>
