--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -13,8 +13,8 @@
   <div class="post-index-container">
     <div class="post-index-container-top">
       <div style="display:flex;align-items:center;">
-        <h1 style="font-size: 6vh">커뮤니티</h1>
-        <h2 style="font-size: 3vh">수정하기</h1>
+        <a style="font-size: 6vh" href="/posts">커뮤니티</a>
+        <a style="font-size: 3vh" href="/posts">수정하기</a>
       </div>
       <div class="post-search" style="">
         <%= link_to '뒤로', @post %>    
