--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -9,8 +9,8 @@
   <div class="post-index-container">
     <div class="post-index-container-top">
       <div style="display:flex;align-items:center;">
-        <h1 style="font-size: 6vh">커뮤니티</h1>
-        <h2 style="font-size: 3vh">새글 쓰기</h1>
+        <a href="/posts" style="font-size: 6vh">커뮤니티</a>
+        <a href="/posts" style="font-size: 3vh">새글 쓰기</a>
       </div>
       <div class="post-search" style="">
        <%= link_to '메인으로', posts_path %>
