--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,8 +12,8 @@
   <div class="post-index-container post-show">
     <div class="post-index-container-top">
       <div style="display:flex;align-items:center;">
-        <a href="/posts" style="font-size: 6vh">커뮤니티</a>
-        <h2 style="font-size: 3vh">글보기</h1>
+        <a href="/posts" style="font-size: 6vh" >커뮤니티</a>
+        <a   href="/posts" style="font-size: 3vh">글보기</a>
       </div>
       <div class="post-search" style="">
      <%if user_signed_in? then if @post.author_id == current_user.id %>
