--- a/app/assets/stylesheets/quiz.scss
+++ b/app/assets/stylesheets/quiz.scss
@@ -124,11 +124,14 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
+    background: url("빗금.png") 0 0 repeat;
+    background-size: 20% auto; 
+    z-index:0;
 }
 
 .quiz-2-container {
-    padding-left: 20%; 
-    width: 1000%;
+    padding-left: 15vw; 
+    width: 900%;
     height: 100%;
     position:absolute;
     display:flex;
@@ -140,8 +143,7 @@
     position: relative;
     align-items: center;
     height: 50vw;
-    width: 60vw;
-    float: left;
+    width: 70vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -149,26 +151,40 @@
 }
 
 .quiz-2-container-content-box {
-    width: 70%;
-    height: 60%;
+    width: 50vw;
+    height: 30vw;
     background-color: rgb(255, 255, 255);
     box-shadow: 1vh 1vh 4vh #2929293d;
     position:relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:  center;
+    img {
+        height: 15vw;
+        
+        width: auto;
+       
+    }
+    h2 {
+        font-size: 1.7vw;
+        font-weight: 400;
+    }
 }
 
 .quiz-2-container-content-box::after {
     display: block;
     text-align: center;
-    padding-top: 0.5vh;
+    padding-top: 0.4vw;
     position: absolute;
-    font-size: 2.5vh;
+    font-size: 1.5vw;
     border-radius: 50%;
     font-weight: 500;
     color: white;
-    width: 4vw;
-    height: 7vh;
-    top: -4vh;
-    left: 18vw;
+    width: 5vw;
+    height: 5vw;
+    top: -2.5vw;
+    left: 23vw;
     z-index: -1;
     background-color:rgb(180, 39, 39);
 } 
@@ -185,7 +201,7 @@
 .quiz-2-container-answer {
     width: 100%;
     margin-top: 3%;
-    height: 10%;
+    height: 7vw;
     display: flex;
     flex-direction: row;
     justify-content:  center;
@@ -196,10 +212,10 @@
 
 .yes, .no {
     box-shadow: 5px 7px 20px #2929293d;
-    border-radius: 5vh;
+    border-radius: 5vw;
     width: 15vw;
     height: 4vw;
-    font-size: 20vh;
+    
     display: flex;
     flex-direction: column;
     justify-content:  center;
@@ -214,7 +230,7 @@
 }
 
 .yes h2 {
-    font-size: 2.5vh;
+    font-size: 1.3vw;
     font-weight: 500;
     color: white;
 }
@@ -225,7 +241,29 @@
 }
 
 .no h2 {
-    font-size: 2.5vh;
+    font-size: 1.3vw;
     font-weight: 500;
     color: white;
+}
+
+
+#quiz-3 {
+    img {
+        bottom: -1vw;
+        position:relative;
+   
+    }
+}
+
+
+#quiz-7 {
+    img {
+        top: -1vw;
+        position:relative;
+   
+    
+    }
+    h2 {
+        color: white;
+    }
 }
