--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,8 +39,9 @@
   <body>
     <div class="nav">
       <div class="logo">
-        <a href="/"><h1>Logo With</h1></a>
-        <h2>성 성 | 가르칠 교</h2>
+        <a href="/"><img src="/assets/성교한글.svg" style="height: 15vh;width: auto;"></a>
+        <h2>우리들의 | 성교한 | 시간</h2>
+     
       </div>
       <div class="nav-menu-box">
           <a class="nav-menu" href="/">
