--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
     <div class="nav">
       <div class="logo">
         <a href="/"><img src="/assets/성교한글.svg" style="height: 15vh;width: auto;"></a>
-        <h2>우리들의 | 성교한 | 시간</h2>
+        <h2>성스러운 모임</h2>
      
       </div>
       <div class="nav-menu-box">
