--- a/app/assets/stylesheets/venereal.scss
+++ b/app/assets/stylesheets/venereal.scss
@@ -1,6 +1,10 @@
 .venereal {
     margin-top: 20px;
     background-image: linear-gradient(white, white, #fff3de);
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .vene-top {
@@ -104,4 +108,113 @@
 .vene-index {
     position: fixed;
     z-index: 5;
+}
+
+.vene-man, .vene-woman {
+    width: 40vh;
+    overflow: hidden;
+    height: 40vh;
+    border-radius: 0.7vh;
+    box-shadow: 1vh 1vh 4vh rgba(0, 0, 0, 0.123);
+    margin: 0 5vh 0 5vh;
+    position: relative;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    cursor: pointer;
+    transition: color 0.3s linear 0s;
+    h1, h2 {
+        z-index: 5;
+        opacity: 1;
+        position: relative;
+        color: white;
+    }
+    h2 {
+        font-size: 4vh;
+
+    }
+    h1 {
+        font-size: 3.5vh;
+    }
+    
+}
+
+
+.human-shadow {
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0vh 0vh 4vh rgba(0, 0, 0, 0.205);
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.329);
+    opacity: 1;
+    z-index: 4;
+    transition: opacity 0.3s linear 0s;
+   
+}
+
+.human-shadow:hover {
+    opacity :0;
+ 
+}
+.vene-human {
+    display:flex;
+   justify-content: center;
+    margin-top: 10vh;
+    margin-bottom: 10vh;
+}
+.vene-woman {
+   
+    img {
+        height: auto;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index:1;
+    }
+}
+.vene-man {
+    img {
+        height: auto;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        z-index: 1;
+        left: 0;
+    }
+}
+
+.vene-human-see {
+    width: 140vh;
+    height: 100vh;
+    background-color: yellow;
+    position: relative;
+}
+
+
+.vene-human-see-pic {
+width: 50vh;
+height: 50vh;
+border-radius: 0.8vh;
+position: absolute;
+top: 20vh;
+left: 15vh;
+z-index:3;
+img {
+    width: 100%;
+    height: 100%;
+    position:relative;
+   
+}
+}
+
+.vene-human-see-content {
+    width: 130vh;
+    height: 70vh;
+    background-color: white;
+    border-radius:0.5vh;
+    position: absolute;
+    top: 25vh;
+    left: 5vh;
 }
