--- a/app/views/education/index.html.erb
+++ b/app/views/education/index.html.erb
@@ -95,7 +95,8 @@
         </div>
         <div id="pin-6" class="airpin">
             <div id="qna"  class="education-main-box">
-               
+               <img src="/assets/질문.png">
+            <button>질문하러 가기!</button>   
             </div>
         </div>
     </div>
