--- a/app/views/education/venereal.html.erb
+++ b/app/views/education/venereal.html.erb
@@ -4,6 +4,7 @@
 </div>
 
 <div class="venereal">
+   
     <div class="vene-top">
         <div class="vene-title">
             <h1>멀고도 가까운 성병 알아보기</h1>
@@ -14,7 +15,30 @@
             마우스를 올려보세요.
         </div>
     </div>
-
+    <div class="vene-human">
+        <div class='vene-man'>
+        <div class="human-shadow"></div>
+         <img src="/assets/man.png">
+         <h1>Male</h1>
+         <h2>남자</h2>
+        </div>
+        <div class='vene-woman'>
+        <div class="human-shadow"></div>
+         <img src="/assets/woman.jpg">
+         <h1>Male</h1>
+         <h2>여자</h2>
+        </div>
+    </div>
+    <div class="vene-human-see">
+        <div class="vene-human-see-pic">
+            <img src="/assets/play.gif">
+        </div>
+        <div class="vene-human-see-content">
+            <div class="vene-human-see-content-box">
+                <h1>임질</h1>
+            </div>
+        </div>
+    </div>
     <div class="vene-mid">
         <div class="vene-mid-1">
             <div>
@@ -63,7 +87,8 @@
     <div class="vene-index">
         <h1>목록</h1>
     </div>
+</div> 
 <div class="education-gend">
-<img src="/assets/whale1.gif" style="width: 400px; height: 400px;">
-<h1>콘텐츠 준비중</h1>
+    <img src="/assets/whale1.gif" style="width: 400px; height: 400px;">
+    <h1>콘텐츠 준비중</h1>
 </div>
