--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -6,7 +6,8 @@
 <div class="main-1">
     <div class="main-1-container">
         <div class="main-1-title">
-            <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1>
+        <img src='/assets/성교할래.svg'>
+            <%# <h1>성교</h1><h1 style="color: rgb(255, 255, 214)">할래</h1> %>
              <%# <img src="/assets/성교한자.svg"> %>
         </div>
         <h1>그런적 있지 않아?</h1>
