--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
      <meta name="google-signin-client_id" content="336256666389-timddavdks14cnn1jhqv6qqpcjuo4s37.apps.googleusercontent.com">
     <link href='https://cdn.rawgit.com/openhiun/hangul/14c0f6faa2941116bb53001d6a7dcd5e82300c3f/nanumbarungothic.css' rel='stylesheet' type='text/css'>
-    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/peach.ico" />
    
     
 
@@ -35,12 +35,13 @@
           position: fixed;
         }
     }
+   
   </style>
   <body>
     <div class="nav">
       <div class="logo">
-        <a href="/"><img src="/assets/성교한글.svg" style="height: 15vh;width: auto;"></a>
-        <h2>성스러운 모임</h2>
+        <a href="/"><img src="/assets/성교한글1.svg" style="height: 15vh;width: auto;"></a>
+        <h2>性스러운 가르침</h2>
      
       </div>
       <div class="nav-menu-box">
