--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,7 +24,9 @@
     outline: none;
 }
 
-
+ ul {
+     list-style:none;
+ }
 html,body {
     width: 100%;
     height: 100%;
@@ -36,7 +38,7 @@ p, h1, h2, h3, h4, a {
     font-family: 'Nanum Barun Gothic', sans-serif;
     color: rgb(56, 56, 56);
     text-shadow: 0px 0px 2.5px rgba(65, 65, 65, 0.342);
-  
+    font-family: 'seoulNamSan' sans-serif;
 }
 a {
     text-decoration: none;
@@ -70,8 +72,10 @@ a {
 }
 
 .logo h2 {
-    font-size: 3vh;
+    font-size: 2.2vh;
     margin-left:1vh;
+    position:relative;
+    top:0.3vh;
 }
 
 .logo-1 {
@@ -156,3 +160,5 @@ a {
     50%{opacity:0;transform:scale(1.3)}
     100%{opacity:0;transform:scale(1.5)}
 }
+
+
